[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemies/boss.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/boss.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/boss_weapon.png" type="Texture" id=3]
[ext_resource path="res://sounds/sword-knife_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://fonts/futile_font.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -39 ), Vector2( 9, -42 ), Vector2( 9, -39 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("weapon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -105.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "shoot"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -17 ), Vector2( 6, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_spear"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.72549, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="boss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( 6, -12 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 9, -17 )
texture = ExtResource( 2 )

[node name="weapon" type="Sprite" parent="."]
position = Vector2( 12, -40 )
rotation = -1.83259
z_index = -1
texture = ExtResource( 3 )

[node name="range_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -120, 0 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/shoot = SubResource( 6 )

[node name="hurt_anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 5 )

[node name="knife" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0
pitch_scale = 0.5

[node name="hp" type="Label" parent="."]
margin_left = -8.0
margin_top = -81.0
margin_right = 32.0
margin_bottom = -67.0
custom_fonts/font = ExtResource( 5 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="low_hp" from="." to="." method="_on_boss_low_hp"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
